@@ -96,6 +96,7 @@ class FreezeFrameData (gtk.VBox, Plugin):
         dirname = os.path.dirname(__file__)
         filename = os.path.join(dirname, 'freeze_frame_data.ui')
         self._builder = gtk.Builder()
+        self._builder.set_translation_domain('garmon')
         self._builder.add_from_file(filename)
         
         main_hbox = self._builder.get_object('main_hbox')
